--- a/.env
+++ b/.env
@@ -38,4 +38,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
+MAILER_DSN=smtp://bbf90d244cbdaa:ee6f59784c5f45@sandbox.smtp.mailtrap.io:2525
+auth_mode=login
 ###< symfony/mailer ###
