--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,6 +17,19 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            custom_authenticator: App\Security\LoginFormAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
+
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 604800
+                path: /
+                # by default, the feature is enabled by checking a checkbox in the
+                # login form, uncomment the following line to always enable it.
+                #always_remember_me: true
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -27,8 +40,14 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        # - { path: ^/admin/utilisateurs, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_PRODUCT_ADMIN }
+        - { path: ^/profil, roles: ROLE_USER }
+
+    role_hierarchy:
+        ROLE_PRODUCT_ADMIN: ROLE_USER
+        ROLE_ADMIN: ROLE_PRODUCT_ADMIN
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
 
 when@test:
     security:
